Fix nasty horizontal scroll

--- a/src/pages/queue/Queue.module.scss
+++ b/src/pages/queue/Queue.module.scss
@@ -5,7 +5,7 @@
   height: 100vh;
   color: $primaryText;
   display: flex;
-  overflow-y: hidden;
+  overflow: hidden;
   flex-direction: row;
 }
 
